fix: for real classes